--- a/style.css
+++ b/style.css
@@ -106,6 +106,63 @@ header img {
     color: var(--color-texto);
 }
 
+/* Estilos Carrusel */
+.carrusel {
+    width: 35%;
+    margin: 20px auto;
+    height: 250px;
+    display: flex;
+    overflow: hidden;
+    box-shadow: 10px 10px 35px 0px rgba(0,0,0,0.75);
+    border-radius: 5px;
+}
+    /* Contenedor para animacion de carrusel */
+.carrusel__container {
+    width: 100%;
+    height: 250px;
+    -webkit-animation: 30s slidy infinite;
+    animation: 30s slidy infinite;
+    position: relative;
+    display: flex;
+}
+    /* Definicion de la animacion */
+@keyframes slidy {
+    0% { left: 0%; }
+    20% { left: 0%; }
+    25% { left: -100%; }
+    45% { left: -100%; }
+    50% { left: -200%; }
+    70% { left: -200%; }
+    75% { left: -300%; }
+    95% { left: -300%; }
+    100% { left: -300%; }
+}
+
+.carrusel .carrusel__item1, .carrusel__item2, .carrusel__item3, .carrusel__item4 {
+    min-width: 100%;
+    height: 100%;
+    float: left;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.carrusel__item1 {
+    background-image: url(./pics/Juegos/the-witcher.jpg);
+}
+
+.carrusel__item2 {
+    background-image: url(./pics/Juegos/skyrim.jpg);
+}
+
+.carrusel__item3{
+    background-image: url(./pics/Juegos/fifa21.png);
+}
+
+.carrusel__item4 {
+    background-image: url(./pics/Juegos/GTA5.jpg);
+}
+
 /* Estilos del pie de pagina */
 footer {
     width: 100%;
