--- a/style.css
+++ b/style.css
@@ -483,6 +483,37 @@ header img {
 .coming-soon__game-target p {
     font-size: 1.2rem;
 }
+
+    /* Estilos de tiendas */
+.shops-container {
+    width: 100%;
+    height: 100%;
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+}
+
+.shops-container a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.shops-container a img {
+    max-width: 100%;
+    transform: scale3d(1.05,1.05,1);
+}
+
+.shops-container a img:hover {
+    transition: opacity 0.35s, transform 0.35s;
+    transform: scale3d(1,1,1);
+    opacity: 0.8;
+}
+
 /* Estilos del pie de pagina */
 footer {
     width: 100%;
