--- a/style.css
+++ b/style.css
@@ -240,19 +240,19 @@ header img {
 }
 
 .carrusel__item1 {
-    background-image: url(./pics/Juegos/the-witcher.jpg);
+    background-image: url(https://i.ibb.co/cF8DdZY/the-witcher.jpg);
 }
 
 .carrusel__item2 {
-    background-image: url(./pics/Juegos/skyrim.jpg);
+    background-image: url(https://i.ibb.co/my0kpq6/skyrim.jpg);
 }
 
 .carrusel__item3{
-    background-image: url(./pics/Juegos/fifa21.png);
+    background-image: url(https://i.ibb.co/2kj9h7P/fifa21.png);
 }
 
 .carrusel__item4 {
-    background-image: url(./pics/Juegos/GTA5.jpg);
+    background-image: url(https://i.ibb.co/0BHtQfk/GTA5.jpg);
 }
 
     /* Contenedor de iconos */
@@ -315,19 +315,19 @@ header img {
 .game1 {
     grid-column: 1 / 3;
     grid-row: 1 / 2;
-    background-image: url(./pics/Juegos/crash-bandicoot.jpg);
+    background-image: url(https://i.ibb.co/F0cvQjH/crash-bandicoot.jpg);
     box-shadow: -7px 6px 5px -1px rgba(62,62,62,0.75);
 }
 .game2 {
     grid-column: 4 / 6;
     grid-row: 2 / 3;
-    background-image: url(./pics/Juegos/minecraft.jpg);
+    background-image: url(https://i.ibb.co/cJs4GYr/minecraft.jpg);
     box-shadow: 7px 6px 5px -1px rgba(62,62,62,0.75);
 }
 .game3 {
     grid-column: 1 / 3;
     grid-row: 3 / 4;
-    background-image: url(./pics/Juegos/cod-warzone.jpg);
+    background-image: url(https://i.ibb.co/CKYHXq5/cod-warzone.jpg);
     box-shadow: -7px 6px 5px -1px rgba(62,62,62,0.75);
 }
 
