--- a/style.css
+++ b/style.css
@@ -514,6 +514,71 @@ header img {
     opacity: 0.8;
 }
 
+/* SECCION 2 */
+.section-two {
+    width: 100%;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-image: url(./pics/Seccion-2/titanfall-2-juego-destruccion-papel-pintado-1920x1080_48.jpg);
+    background-position: bottom;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+.xpass {
+    width: 100%;
+    height: 120px;
+    padding-left: 40px;
+    display: flex;
+    align-items: center;
+    justify-self: flex-end;
+}
+
+.xpass img {
+    width: 100px;
+    height: 100px;
+}
+.xpass h2 {
+    font-size: 7rem;
+    margin-left: 10px;
+    margin-top: 10px;
+    text-shadow: 0px 0px 3px var(--color-texto-enfasis);
+}
+
+.xpass-description {
+    width: 100%;
+    padding-left: 40px;
+    font-size: 1.8rem;
+    text-shadow: 0px 0px 3px var(--color-texto-enfasis);
+}
+
+.xpass-link {
+    width: 130px;
+    height: 50px;
+    margin-top: 10px;
+    margin-left: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 3px solid black;
+    transform: scale3d(1.05,1.05,1);
+}
+.xpass-link:hover {
+    transform: scale3d(1,1,1);
+}
+.xpass-link:active {
+    background-color: var(--color-texto-enfasis);
+}
+.xpass-link a {
+    width: 100%;
+    text-align: center;
+    font-size: 1.8rem;
+    color: var(--color-texto);
+    text-shadow: 0px 0px 3px var(--color-texto-enfasis);
+}
+
 /* Estilos del pie de pagina */
 footer {
     width: 100%;
