Cambio de url  local por remota en el fondod e section2

--- a/style.css
+++ b/style.css
@@ -521,7 +521,7 @@ header img {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-image: url(./pics/Seccion-2/titanfall-2-juego-destruccion-papel-pintado-1920x1080_48.jpg);
+    background-image: url(https://i.ibb.co/CBvpZVq/titanfall-2-juego-destruccion-papel-pintado-1920x1080-48.jpg);
     background-position: bottom;
     background-size: cover;
     background-repeat: no-repeat;
